# clipboard-files

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  linux.rs  macos.rs  main.rs  windows.rs
