[package]
name = "clipboard-files"
version = "0.1.2"
edition = "2021"

description = "Read file paths from the clipboard"
keywords = ["clipboard"]
authors = ["Didrik Nordström <https://github.com/betamos>"]
repository = "https://github.com/betamos/clipboard-files/"
homepage = "https://github.com/betamos/clipboard-files/"
documentation = "https://docs.rs/clipboard-files/"
license = "MIT OR Apache-2.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
urlencoding = "2.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_UI_Shell"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"

[dependencies]
thiserror = "2.0.12"
